--- a/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
+++ b/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
@@ -11,4 +11,9 @@
       <Folder Include="Service" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+      <PackageReference Include="System.Reflection" Version="4.3.0" />
+    </ItemGroup>
+
 </Project>
