--- a/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
+++ b/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.1" />
       <PackageReference Include="System.Reflection" Version="4.3.0" />
     </ItemGroup>
 
