--- a/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
+++ b/AppointmentSystemAPI/AppointmentSystemAPI.Data/AppointmentSystemAPI.Data.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AutoMapper" Version="11.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
       <PackageReference Include="System.Reflection" Version="4.3.0" />
     </ItemGroup>
 
